@@ -1,5 +1,10 @@
 2003-11-21  Alper Ersoy  <dirt@gtk.org>
 
+	* makeinfo/sectioning.c (sectioning_underscore): insert label="" only
+	when the output format is Docbook.
+
+2003-11-21  Alper Ersoy  <dirt@gtk.org>
+
 	* makeinfo/insertion.c (cm_end): get rest of the line before returning
 	in case of error, so the parameter to @end does not get leaked into
 	the output document.
